--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sfpy/checkout-components": "^1.0.1",
+    "@sfpy/node-sdk": "^3.0.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.55.0",
     "@types/recharts": "^1.8.29",
@@ -27,6 +29,7 @@
     "react-medium-image-zoom": "^5.3.0",
     "react-responsive": "^10.0.1",
     "recharts": "^3.1.2",
+    "safepay": "^0.0.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
